# depmap_omics

./: .RData  .Rhistory  .codeworkspace.code-workspace  .dockerignore  .dockstore.yml  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  25q2_brunello.py  25q2_upload_other_libraries.py  CCLE_postp_function.R  CCLE_postp_function.py  Copy_Number_CCLE.ipynb  Copy_Number_CCLF.ipynb  Copy_Number_CCLF_deprecated.ipynb  DNA.ipynb  DepMap Upload-Copy1.ipynb  DepMap Upload-Copy2.ipynb  DepMap Upload.ipynb  DepMap_Upload-Copy1.ipynb  DepMap_Upload.ipynb  DepMap_processing_pipeline.md  Dockerfile  Dockerfile.postproc  Documents  Fingerprint_CCLE.ipynb  Makefile  Mutations_CCLE.ipynb  Mutations_CCLF.ipynb  Mutations_CCLF_changed.ipynb  Mutations_CCLF_new.ipynb  Mutations_CCLF_some_postprocessing.ipynb  Mutations_prev_new_comparison.ipynb  PureCN_Curation.ipynb  PureCN_curation.ipynb  README.md  RNA.ipynb  RNA_CCLE-Copy1.ipynb  RNA_CCLE.ipynb  (+73 more)
CNV_pipeline/: generate_single_seg_file.R
Fingerprint_pipeline/: ccle_29k_coding_snps_hg19.map  ccle_29k_coding_snps_hg38.map  conf_crosscheck_vcf.json  conf_fingerprint_bam  conf_fingerprint_bam.json  conf_fingerprint_bam_with_liftover.json  crosscheck_vcfs.wdl  fingerprint_bam.wdl  fingerprint_bam_with_liftover.wdl  make_ccle_29k_coding_snps_step1.sh  make_ccle_29k_coding_snps_step2.R
PureCN_pipeline/: PureCN.wdl  PureCN_update_solution.wdl  README.md  call_wgd_and_cin.R  inputs_PureCN-AGILENT.json  inputs_PureCN-ICE.json  inputs_PureCN.json  inputs_PureCN_update_solution.json  make_wgs_intervals.R  outputs_PureCN-AGILENT.json  outputs_PureCN-ICE.json  outputs_PureCN.json  outputs_PureCN_update_solution.json
RNA_pipeline/: Aggregate_Fusion_Calls.wdl  ExonUsage_hg38_fixed.wdl  RNA_aggregate.wdl  RNA_pipeline.wdl  RNA_pipeline_strand.wdl  RNA_stranded_rsem_rnaseqc2.wdl  aggregate_rsem_results.py  aggregate_vcfs.wdl  all_configs.json  annotate_variants.wdl  conf_hg38_STAR_fusion.json  conf_rnaseq-germline-snps-indels.json  conf_rnaseqc2_v1-0_BETA_cfg.json  conf_rsem_v1-0_BETA_cfg.json  conf_samtofastq_v1-0_BETA_cfg.json  conf_star_v1-0_BETA_cfg.json  conf_star_v1-0_BETA_cfg_hg19.json  ctat-mutations.hg38.wdl  ctat_mutations.Terra.wdl  ctat_mutations.wdl  dalmatian_update_strandness.py  generate_single_fusion_file.R  hg38_STAR_fusion.wdl  hg38_STAR_fusion_kickstart.wdl  hg38_STAR_fusion_wdl1-0.wdl  inputs_aggregate_vcfs.json  inputs_rnaseq-germline-snps-indels.json  inputs_rnaseqc2_v1-0_BETA_cfg.json  inputs_rsem_aggregate_results.json  inputs_rsem_v1-0_BETA_cfg.json  inputs_samtofastq_v1-0_BETA_cfg.json  inputs_star_v1-0_BETA_cfg.json  inputs_star_v1-0_BETA_cfg_hg19.json  outputs_hg38_STAR_fusion.json  outputs_rnaseq-germline-snps-indels.json  outputs_rsem_v1-0_BETA_cfg.json  outputs_samtofastq_v1-0_BETA_cfg.json  outputs_star_v1-0_BETA_cfg_hg19.json  rna_strand.wdl  rnaseq-germline-snps-indels.wdl  (+20 more)
WGS_pipeline/: Aggregate_CN_seg_files.wdl  AnnotSV.wdl  ArrayOfFilesToTxt.wdl  BamToUnmappedRGBams.wdl  BamToUnmappedRGBams_noHardClips.wdl  CNV_Somatic_Workflow_on_Sample.wdl  CramToBam.wdl  Manta_SomaticSV.wdl  Manta_SomaticSV_original.wdl  Manta_SomaticSV_v1_0.wdl  PreProcessingForVariantDiscovery_GATK4.wdl  PureCN.wdl  WES_noCN_pipeline.wdl  WGS_aggregate.wdl  WGS_pipeline.wdl  WGS_pipeline_22Q2.wdl  WGS_preprocessing.wdl  WGS_preprocessing_DRAGEN.wdl  WGS_preprocessing_DRAGEN_24Q2.wdl  aggregate_microsatellite_repeats.wdl  aggregate_msisensor2_repeats.py  aggregate_vcfs_sv.wdl  all_configs.json  annotate_variants.wdl  bam-to-unmapped-bams.wdl  bcftools.wdl  civic.csv  civic_export.py  cnn-variant-common-tasks.wdl  cnn-variant-filter.wdl  cnv_common_tasks.wdl  cnv_somatic_funcotate_seg_workflow.wdl  cnv_somatic_oncotator_workflow.wdl  cnv_somatic_pair_workflow.wdl  common_variant_filter.wdl  conf_Aggregate_CN_seg_files.json  conf_CNV_Somatic_Workflow_on_Sample.json  conf_Manta_SomaticSV.json  conf_aggregate_vcfs_snp.json  conf_cnn-variant-filter.json  (+44 more)
WGSmut_pipeline/: CGA_WES_CCLE_Characterization_Pipeline_v0.1_Jul2019_copy.wdl  aggregateMAFs_selectFields_copy.wdl  all_configs.json  common_variant_filter.wdl  conf_ArrayOfFilesToTxt.json  conf_BamToUnmappedRGBams_MC.json  conf_CGA_WES_CCLE_Characterization_Pipeline_v0.1_Jul2019_copy.json  conf_PreProcessingForVariantDiscovery.json  conf_aggregateMAFs_selectFields_copy.json  conf_aggregateMAFs_selectFields_unfiltered.json  conf_align_ubam_to_hg19.json  conf_common_variant_filter.json  conf_cram_to_bam_v1-0_BETA_cfg.json  conf_filterMAF_on_CGA_pipeline.json  cram_to_bam_v1-0_BETA_cfg.wdl  filterMAF_on_CGA_pipeline.wdl  inputs_ArrayOfFilesToTxt.json  inputs_BamToUnmappedRGBams_MC.json  inputs_PreProcessingForVariantDiscovery.json  inputs_aggregateMAFs_selectFields_copy.json  inputs_align_ubam_to_hg19.json  inputs_cram_to_bam_v1-0_BETA_cfg.json  (+8 more)
(+1207 files in other folders)
