[tool.poetry]
name = "depmap-omics"
version = "0.1.0"
description = "CDS-omics pipelines"
authors = ["CDS-omics <qqin@broadinstitute.org>"]
readme = "README.md"
packages = [{include = "depmapomics"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
pandas = "^1.5.3"
taigapy = {git = "https://github.com/broadinstitute/taigapy.git", rev = "0b67741f18fe6e3c2f508ee84b06ca3bed853b82"}
seaborn = "^0.12.2"
cds-genepy = {git = "https://github.com/qinqian/cds-genepy", branch = "poetry"}
depmap_omics_upload = {git = "https://github.com/broadinstitute/depmap_omics_upload", branch = "main"}
pyright = "1.1.293"
pandera = "^0.13.4"
fire = "^0.5.0"
scikit-learn = "^1.2.1"
fsspec = "^2023.1.0"
gcsfs = "^2023.1.0"
tqdm = "^4.64.1"
psycopg2-binary = "^2.9.5"

[tool.poetry.scripts]
depmapomics = 'depmapomics.__main__:main'

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.2"
pyright = "^1.1.290"
pytest = "^7.2.1"
pyright-ratchet = {git = "https://github.com/pgm/pyright-ratchet.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
