[tool.poetry]
name = "depmap-omics"
version = "0.1.0"
description = "CDS-omics pipelines"
authors = ["CDS-omics"]
readme = "README.md"
packages = [{include = "depmapomics"}, {include="mgenepy"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
pandas = "^1.5.3"
taigapy = {version = "^3.13.0", source = "public-python"}
seaborn = "^0.12.2"
depmap_omics_upload = {git = "https://github.com/broadinstitute/depmap_omics_upload", branch="25q3-mut-upload"}
pyright = "1.1.293"
pandera = "^0.13.4"
fire = "0.7.0"
tqdm = "^4.64.1"
scipy="^1.0.0"
firecloud_dalmatian= {git = "https://github.com/pgm/dalmatian", rev = "5f37ef9"}
miniwdl = "^1.10.0"
ruff = "^0.4.10"
biomart = "^0.9.2"
packaging = ">=23.1"
fsspec = "^2025.3.0"
gcsfs = "^2025.3.0"
natsort = "^8.4.0"

[tool.poetry.scripts]
depmapomics = 'depmapomics.__main__:main'

[[tool.poetry.source]]
name = "public-python"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple/"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.2"
pyright = "^1.1.290"
pytest = "^7.2.1"
pyright-ratchet = {git = "https://github.com/pgm/pyright-ratchet.git"}
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "I",  # isort formatting
]
extend-include = ["*.ipynb"]
