[metadata]
name = depmapomics
version = 0.0.1
author = Example Author
author_email = depmap@broadinstitute.org
description = Pipelines for the analysis of the DepMap omics data
#long_description = file: README.md
#long_description_content_type = text/markdown
url = https://github.com/broadinstitute/ccle_processing
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
#classifiers =
#    Programming Language :: Python :: 3
#    License :: OSI Approved :: MIT License
#    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires = 
    broad-genepy @ https://github.com/broadinstitute/genepy/archive/refs/heads/master.zip
    tqdm
    fsspec 
    gcsfs

[options.packages.find]
where = src